Fix width for date input boxes on mobile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -82,6 +82,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
 }
 
 .filter__input-container {
